# HaruhikageGit

./: Cargo.toml  README.md  test_path.rs  test_status.ps1
.github/workflows/: build.yml
desktop/src/: App.css  App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: AccountManager.tsx  AccountPanel.tsx  BranchPanel.tsx  CommitForm.tsx  DiffAndActionsArea.tsx  FilePreviewPanel.tsx  FileStaging.tsx  HistoryPanel.tsx  IdentityPanel.tsx  Modals.tsx  ProfilesPanel.tsx  QuickActionsPanel.tsx  RepoPanel.tsx  RepoSidebar.tsx  TopNavBar.tsx  WorkspacePanel.tsx
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: config.rs  git.rs  github.rs  mod.rs  ops.rs  proxy.rs
