[package]
name = "haruhikage-git"
version = "0.1.0"
edition = "2024"
description = "快速切换 git 账户与提交信息的命令行工具"
repository = "https://github.com/ProjectEio/HaruhikageGit"
license = "MIT"

[[bin]]
name = "hg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
dirs = "5"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
